@@ -1,3 +1,8 @@
+2005-12-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* scripts/pkgunpack.in, scripts/pkginstall.in: Moved `init_install'
+	  function from pkginstall to pkgunpack.
+
 2005-12-18 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* profiles/lfs-6.1/prometheus: Fixed a syntax error.
